🎨 - Style and markup for micro posts, and micro posts with attachments

--- a/src/_includes/layouts/_post.njk
+++ b/src/_includes/layouts/_post.njk
@@ -2,69 +2,48 @@
 layout: "layouts/base.njk"
 bodyClass: "article"
 ---
+{% from '../micro-post.njk' import microPost %}
 {% from '../social-icon.njk' import socialIcon %}
 
+
 <div class="layout-post container">
-    <article class="post post--by-self">
-        <div class="post__content">
-            {{ content | safe  }}
-        </div>
-        <footer class="post__footer">
-            <time class="dt-published post__date">{{ date | humanReadableDateTime }}</time>
-            <div class="post__links">
-                {% if blueskyUrl %}
-                <a class="post__link" href="{{ blueskyUrl }}">
-                    {{ socialIcon({ icon: 'bluesky' }) }}
-                    <span class="visually-hidden">View on Bluesky</span>
-                </a>
-                {% endif %}
-                {% if mastodonUrl %}
-                <a class="post__link" href="{{ mastodonUrl }}">
-                    {{ socialIcon({ icon: 'mastodon' }) }}
-                    <span class="visually-hidden">View on Mastodon</span>
-                </a>
-                {% endif %}
-                <a class="post__permalink" href="/micro/{{ date | toISOString | slugify }}">Permalink</a>
-            </div>
-        </footer>
-    </article>
+    {{ microPost(text, date, blueskyUrl, mastodonUrl, attachment, collections) }}
     {% set publicUrl = "https://henry.codes"  + page.url %}
-    {{ publicUrl }}
     {% if webmentions %}
         {% set filteredMentions = webmentions | webmentionsByUrl(publicUrl) %}
-    {% endif %}
-    {% if filteredMentions %}
-        {% set likes = filteredMentions | getLikes %}
-        {% set replies = filteredMentions | getReplies %}
-        <section>
-            <h2>Webmentions</h2>
-            {% if likes %}
+        {% if filteredMentions.length > 0 %}
+            {% set likes = filteredMentions | getLikes %}
+            {% set replies = filteredMentions | getReplies %}
             <section>
-                <h3>Liked by:</h3>
-                {% for like in likes %}
-                <a href="{{ like.author.url }}">
-                    <img src="{{ like.author.photo }}" alt="{{ like.author.name }}" />
-                </a>
-                {% endfor %}
+                <h2>Webmentions</h2>
+                {% if likes %}
+                    <section>
+                        <h3>Liked by:</h3>
+                        {% for like in likes %}
+                            <a href="{{ like.author.url }}">
+                                <img src="{{ like.author.photo }}" alt="{{ like.author.name }}" />
+                            </a>
+                        {% endfor %}
+                    </section>
+                {% endif %}
+                {% if replies %}
+                    <section>
+                        <h3>Replies:</h3>
+                        {% for reply in replies %}
+                            <article>
+                                <header>
+                                    <img src="{{ reply.author.photo}}" />
+                                    <h1>{{ reply.author.name }}</h1>
+                                    <a href="{{ reply.author.url }}">Go to profile</a>
+                                </header>
+                                <div>{{ reply.content.html }}</div>
+                                <a href="{{ reply.url }}">Go to reply</a>
+                            </article>
+                        {% endfor %}
+                    </section>
+                {% endif %}
             </section>
-            {% endif %}
-            {% if replies %}
-            <section>
-                <h3>Replies:</h3>
-                {% for reply in replies %}
-                <article>
-                    <header>
-                        <img src="{{ reply.author.photo}}" />
-                        <h1>{{ reply.author.name }}</h1>
-                        <a href="{{ reply.author.url }}">Go to profile</a>
-                    </header>
-                    <div>{{ reply.content.html }}</div>
-                    <a href="{{ reply.url }}">Go to reply</a>
-                </article>
-                {% endfor %}
-            </section>
-            {% endif %}
-        </section>
         {% endif %}
+    {% endif %}
 
 </div>
