--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,6 +31,7 @@
 @use 'components/grid-overlay';
 @use 'components/recent-reading';
 @use 'components/styled-rows';
+@use 'components/humanity';
 
 @use 'pages/home';
 @use 'pages/work';
