--- a/src/scss/components/_page-nav.scss
+++ b/src/scss/components/_page-nav.scss
@@ -24,6 +24,8 @@
     justify-content: space-between;
   }
   @include screen(lg) {
+    --banner-offset: calc(2.4vw + 2rem);
+
     column-gap: 1rem;
     grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
     margin-block-end: 0;
