--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -46,7 +46,7 @@ topics:
 <body>
     <main>
         <section class="intro">
-            <h1 class="intro__title">A <span>website</span> to <em>destroy</em> all <span>websites</span></h1>
+            <h1 class="intro__title">A <span>website</span> to <em>destroy</em> all <span>websites.</span></h1>
             <div class="intro__subtitle">
                 <span>How to win the war for the soul of the internet</span>
                 <span>and build the <em>Web We Want</em>.</span>
