--- a/src/scss/custom/a-website-to-destroy-all-websites.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites.scss
@@ -8,155 +8,8 @@
 @use './base' as *;
 
 @use './intro';
-
-.toc {
-  margin-block-end: $spacing-large;
-  padding-inline: 1rem;
-  &__title {
-    font-size: 1.25rem;
-    font-weight: normal;
-    font-style: italic;
-    margin-block-end: $spacing-small;
-    text-align: center;
-  }
-  &__list {
-    font-size: 1.25rem;
-    margin: 0;
-    padding: 0;
-    counter-reset: toc;
-    li {
-      display: grid;
-      column-gap: 3.5rem;
-      grid-template-columns: 2ch 1fr;
-      counter-increment: toc;
-      &::before {
-        content: '';
-        content: counter(toc) '.';
-      }
-    }
-  }
-  a {
-    text-decoration: none;
-
-    text-underline-offset: 1px;
-    &:hover,
-    &:focus,
-    &:active {
-      text-decoration: underline;
-    }
-  }
-}
-.chapter-counter {
-  font-family: $font-display;
-  font-size: 2rem;
-  text-align: center;
-  letter-spacing: -0.05em;
-}
-.chapter-one {
-  margin-block-start: $spacing-large;
-}
-
-.chapter-one-hero {
-  margin-block-end: $spacing-large;
-  padding-inline: 1rem;
-  .chapter-counter {
-    margin-block-end: $spacing-small;
-  }
-  &__inner {
-    position: relative;
-    display: grid;
-  }
-  &__title {
-    font-family: $font-display;
-    font-size: 4.5rem;
-    font-size: clamp(4.5rem, 17vw, 7.75rem);
-
-    font-weight: normal;
-    line-height: 0.9;
-    display: grid;
-    grid-column: 1;
-    grid-row: 1 / span 3;
-    grid-template-rows: subgrid;
-    letter-spacing: -0.05em;
-
-    > span {
-      display: block;
-      &:nth-of-type(2) {
-        align-self: center;
-        text-align: center;
-        color: #fefefe;
-      }
-      &:nth-of-type(3) {
-        text-align: right;
-      }
-    }
-  }
-  &__frame {
-    position: relative;
-    z-index: -1;
-    grid-column: 1;
-    grid-row: 2;
-
-    figcaption {
-      position: absolute;
-      top: -0.3rem;
-      right: 0;
-      max-width: 30ch;
-      transform: translateY(-100%);
-    }
-    cite {
-      white-space: nowrap;
-    }
-  }
-}
-
-.pastoral-aside {
-  position: relative;
-  display: grid;
-  margin-block-end: $spacing-large;
-
-  > * {
-    grid-column: 1;
-    grid-row: 1;
-  }
-
-  &__title {
-    @include davinci;
-
-    font-size: 3rem;
-    justify-self: center;
-    position: absolute;
-    align-self: center;
-    margixn-block-start: -1rem;
-    text-align: center;
-    color: #fefefe;
-  }
-}
-
-.disclaimer {
-  position: relative;
-  //  padding:1rem;
-  margin: 0 1rem $spacing-large;
-  padding-block: $spacing-small;
-  outline: 1px solid var(--color-border);
-  &__text {
-    @include davinci;
-
-    font-size: 3rem;
-    text-align: center;
-    span {
-      font-style: italic;
-    }
-  }
-  &__label {
-    left: 50%;
-    transform: translateX(-50%);
-    white-space: nowrap;
-
-    @include label;
-  }
-}
-
+@use './toc';
+@use './chapter-1';
 .chapter-two {
   margin-block-start: $spacing-large;
 }
