--- a/src/scss/custom/_base.scss
+++ b/src/scss/custom/_base.scss
@@ -1,4 +1,5 @@
 @use '../abstract/variables' as g;
+@use '../abstract/mixins' as *;
 
 @use './abstract' as *;
 
@@ -84,6 +85,36 @@ section {
   p {
     font-size: 1.25rem;
     margin-block-end: 1em;
+
+    @include screen(sm) {
+      font-size: 1rem;
+    }
+  }
+
+  @include screen(sm) {
+    display: grid;
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+    column-gap: 1rem;
+    p {
+      grid-column: 2 / span 6;
+    }
+  }
+  @include screen(lg) {
+    grid-template-columns: repeat(16, minmax(0, 1fr));
+    p {
+      grid-column: 6 / span 6;
+    }
+  }
+}
+
+.sm-mk {
+  @include screen(sm) {
+    display: none;
+  }
+}
+.lg-mk {
+  @include screen(lg) {
+    display: none;
   }
 }
 
@@ -104,4 +135,11 @@ section {
     color: var(--color-text);
     background-color: var(--color-background);
   }
+}
+
+.chapter-counter {
+  font-family: $font-display;
+  font-size: 2rem;
+  text-align: center;
+  letter-spacing: -0.05em;
 }
