💈 — All files to partials, better grid infra

--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -63,7 +63,7 @@ topics:
             <ol class="toc__list" role="list">
                 <li><a href="#internet-bad">The internet is bad</a></li>
                 <li><a href="#invention-of-the-automobile">The invention of the automobile</a></li>
-                <li><a href="#tools-for-conviviality">Tools for Conviviality & the industrialization of the Web</a></li>
+                <li><a href="#tools-for-conviviality"><em>Tools for Conviviality</em> & the industrialization of the Web</a></li>
                 <li><a href="#the-web-we-want">The Web we want</a></li>
                 <li><a href="#where-do-we-go-from-here">So where do we go from here?</a></li>
                 <li><a href="#denouement">Denouement</a></li>
