--- a/src/scss/custom/_abstract.scss
+++ b/src/scss/custom/_abstract.scss
@@ -1,4 +1,5 @@
 @use '../abstract/mixins' as *;
+
 $image-dir: '/img/custom/a-website-to-destroy-all-websites';
 
 $color-fog: #eae8e1;
@@ -9,6 +10,10 @@ $font-display: 'DaVinci', 'Louize Display', 'Louize', 'Times New Roman', serif;
 $font-display-secondary: 'Louize Display', 'Louize', 'Times New Roman', serif;
 $font-mono: 'SFMono', 'SF Mono', 'Fira Code', Consolas, Monaco, 'Andale Mono',
   'Ubuntu Mono', monospace;
+
+$grid-xs: repeat(4, minmax(0, 1fr));
+$grid-sm: repeat(8, minmax(0, 1fr));
+$grid-lg: repeat(16, minmax(0, 1fr));
 
 $spacing-large: 6.25rem;
 $spacing-small: 3.75rem;
@@ -29,5 +34,19 @@ $spacing-small: 3.75rem;
   background-color: var(--color-contrast);
   @include screen(sm) {
     font-size: 0.75rem;
+  }
+}
+
+@mixin magazine-grid {
+  display: grid;
+  grid-template-columns: $grid-xs;
+  column-gap: 1rem;
+  margin-inline: 1rem;
+  @include screen(sm) {
+    grid-template-columns: $grid-sm;
+    margin-inline: 1.5rem;
+  }
+  @include screen(lg) {
+    grid-template-columns: $grid-lg;
   }
 }
