--- a/src/scss/custom/_toc.scss
+++ b/src/scss/custom/_toc.scss
@@ -3,9 +3,9 @@
 @use './abstract' as *;
 
 .toc {
-  margin-block-end: $spacing-large;
-  padding-inline: 1rem;
-
+  @include magazine-grid;
+  margin-block-end: var(--spacing-large);
+  // padding-inline: 1rem;
   @include screen(lg) {
     margin-block-end: 10rem;
   }
@@ -13,8 +13,9 @@
     font-size: 1.25rem;
     font-weight: normal;
     font-style: italic;
-    margin-block-end: $spacing-small;
+    margin-block-end: var(--spacing-small);
     text-align: center;
+    grid-column: 1 / -1;
 
     @include screen(sm) {
       font-size: 1rem;
@@ -23,28 +24,40 @@
   &__list {
     font-size: 1.25rem;
     margin: 0;
+    display: grid;
+    grid-template-columns: subgrid;
     padding: 0;
     counter-reset: toc;
+    grid-column: 1 / -1;
 
     @include screen(sm) {
       font-size: 1rem;
-      max-width: 50rem;
       margin-inline: auto;
     }
 
     li {
+      grid-column: 1 / -1;
       display: grid;
       column-gap: 3.5rem;
       grid-template-columns: 2ch 1fr;
       counter-increment: toc;
-
       @include screen(sm) {
-        grid-template-columns: 2ch 1fr 2ch;
+        column-gap: 1rem;
+        grid-template-columns: subgrid;
+      }
+
+      @include screen(lg) {
         text-align: center;
       }
       &::before {
         content: '';
         content: counter(toc) '.';
+        @include screen(sm) {
+          grid-column: 2;
+        }
+        @include screen(lg) {
+          grid-column: 4;
+        }
       }
     }
   }
@@ -56,6 +69,12 @@
     &:focus,
     &:active {
       text-decoration: underline;
+    }
+    @include screen(sm) {
+      grid-column-end: span 3;
+    }
+    @include screen(lg) {
+      grid-column: 5 / span 8;
     }
   }
 }
