--- a/src/scss/custom/a-website-to-destroy-all-websites.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites.scss
@@ -10,332 +10,8 @@
 @use './intro';
 @use './toc';
 @use './chapter-1';
-.chapter-two {
-  margin-block-start: $spacing-large;
-}
-
-.chapter-two-hero {
-  position: relative;
-  margin-block-end: $spacing-large;
-  margin-inline: 1rem;
-  .chapter-counter {
-    margin-block-end: $spacing-small;
-  }
-  &__title {
-    @include davinci;
-
-    color: #fefefe;
-    > span {
-      position: absolute;
-      &:nth-of-type(1) {
-        bottom: calc(1.7rem + 17vw);
-        left: 3vw;
-      }
-      &:nth-of-type(2) {
-        font-size: 18vw;
-        inset-block-end: 1.7rem;
-        inset-inline: 0;
-        text-align: center;
-      }
-    }
-  }
-  &__frame {
-    figcaption {
-      // margin-inline-end: 1rem;
-    }
-  }
-}
-
-.no-longer-aside {
-  margin-block-end: $spacing-large;
-  margin-inline: 1rem;
-  figure {
-    &:nth-of-type(1) {
-      margin-block-end: 1.5rem;
-    }
-  }
-  &__text {
-    @include davinci;
-
-    font-size: 2rem;
-    line-height: 1.2;
-    margin-block-end: 1rem;
-
-    span {
-      display: block;
-      &:nth-of-type(1) {
-        margin-block-end: $spacing-small;
-      }
-      &:nth-of-type(2) {
-        text-align: right;
-      }
-    }
-    em {
-      white-space: nowrap;
-    }
-  }
-}
-
-.chapter-three {
-  margin-block-start: $spacing-large;
-}
-.chapter-three-hero {
-  margin-block-end: $spacing-small;
-  margin-inline: 1rem;
-  .chapter-counter {
-    margin-block-end: $spacing-large;
-  }
-  &__title {
-    @include davinci;
-
-    font-size: 4.2rem;
-    hyphens: auto;
-
-    span {
-      font-style: italic;
-      color: #9a9a9a;
-    }
-  }
-}
-.tech-lockup {
-  font-size: 1.25rem;
-  margin-inline: 1rem;
-  > div {
-    margin-block-end: $spacing-large;
-  }
-  h3 {
-    @include davinci;
-
-    font-size: 2rem;
-    margin-block-end: $spacing-small;
-  }
-}
-
-picture {
-  &:has(.book--tools) {
-    float: inline-start;
-    max-width: 160px;
-    margin-block-end: 0.5rem;
-    margin-inline-end: 1rem;
-  }
-}
-.convivial-life {
-  img {
-    float: inline-end;
-    max-width: 160px;
-    margin-block-end: 1rem;
-    margin-inline-start: 1rem;
-  }
-  h3 {
-    @include davinci;
-
-    font-size: 2rem;
-    line-height: 1.2;
-    margin-block-end: $spacing-small;
-  }
-}
-
-.chapter-four {
-  scroll-margin-block-start: 5rem;
-  .rendered h3 {
-    @include davinci;
-
-    font-size: 2rem;
-    font-style: italic;
-    line-height: 1.2;
-    margin-block-end: $spacing-small;
-    text-wrap: balance;
-  }
-}
-.chapter-four-hero {
-  position: relative;
-  margin-block-end: $spacing-large;
-  img {
-    height: 42rem;
-    object-fit: cover;
-  }
-  &__inner {
-    position: absolute;
-    inset-inline: 0;
-    top: $spacing-small;
-    bottom: 2.5rem;
-    display: grid;
-    align-content: space-between;
-    text-align: center;
-  }
-  &__title {
-    @include davinci;
-
-    font-size: 26vw;
-    font-style: italic;
-    line-height: 0.8;
-    color: #fefefe;
-  }
-}
-
-.consider {
-  font-size: 1.25rem;
-  margin-block-end: $spacing-large;
-  text-align: center;
-  &__title {
-    @include davinci;
-
-    font-size: 3rem;
-    font-style: italic;
-    margin-block-end: 1rem;
-  }
-}
-
-.chapter-five {
-  margin-block-start: $spacing-large;
-  scroll-margin-block-start: $spacing-large;
-}
-.chapter-five-hero {
-  position: relative;
-  margin-block-end: $spacing-large;
-  margin-inline: 1rem;
-  text-align: center;
-  &__inner {
-    position: absolute;
-    inset-block-start: $spacing-large;
-    inset-inline: 0;
-    color: #fefefe;
-  }
-  .chapter-counter {
-    margin-block-end: $spacing-large;
-  }
-  &__title {
-    @include davinci;
-
-    font-size: 4.5rem;
-  }
-  figure {
-    position: relative;
-    z-index: -1;
-  }
-  img {
-    height: 45rem;
-    object-fit: cover;
-    filter: brightness(0.8);
-  }
-}
-
-.websites-callout {
-  @include davinci;
-
-  font-size: 4.5rem;
-  font-style: italic;
-  margin-block-end: $spacing-large;
-  margin-inline: auto;
-  padding-inline: 1rem;
-  text-align: center;
-}
-
-.steps-list {
-  margin: 0;
-  margin-block-end: $spacing-large;
-  padding: 0;
-  counter-reset: steps;
-}
-
-.steps-list-item {
-  margin-block-end: $spacing-small;
-  padding-inline: 1rem;
-  counter-increment: steps;
-  &:last-child {
-    margin-block-end: 0;
-  }
-  &:before {
-    font-family: $font-display-secondary;
-    font-size: 2rem;
-    font-weight: 300;
-    display: block;
-    max-width: 3rem;
-    aspect-ratio: 1;
-    margin-block-end: 2rem;
-    margin-inline: auto;
-    // content: counter(steps) '.';
-    content: counter(steps);
-    text-align: center;
-    color: #a18c3a;
-    border: 1px solid currentColor;
-    border-radius: 100%;
-  }
-  h3 {
-    font-family: $font-display-secondary;
-    font-size: 2rem;
-    font-weight: 300;
-    font-style: italic;
-    line-height: 1.2;
-    margin-block-end: $spacing-small;
-    text-align: center;
-    em {
-      font-style: normal;
-    }
-  }
-  p {
-    font-size: 1.25rem;
-  }
-}
-
-.chapter-six {
-}
-.chapter-six-hero {
-  position: relative;
-  margin-block-end: $spacing-small;
-  &__inner {
-    position: absolute;
-    z-index: 2;
-    inset-inline: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: center;
-    color: #fefefe;
-  }
-  .chapter-counter {
-    margin-block-end: 1.5rem;
-  }
-  &__title {
-    @include davinci;
-
-    font-size: 4rem;
-    font-style: italic;
-  }
-  figcaption {
-    margin-inline-end: 1rem;
-  }
-}
-
-.works-cited {
-  padding-inline: 1rem;
-  &__title {
-    font-family: $font-display-secondary;
-    font-size: 2rem;
-    font-weight: 300;
-    font-style: italic;
-    margin-block-end: $spacing-small;
-  }
-}
-.works-cited-list {
-  padding: 0;
-  margin: 0;
-  counter-reset: works;
-  margin-block-end: $spacing-large;
-
-  li {
-    counter-increment: works;
-    list-style: none;
-    margin-block-end: 1em;
-    &:before {
-      content: counter(works);
-      font-size: 0.75em;
-      vertical-align: super;
-      margin-inline-end: 1ch;
-    }
-  }
-  :target {
-    outline: 1px dashed var(--color-border);
-    outline-offset: 0.5rem;
-    scroll-margin-block-start: 1rem;
-  }
-}
+@use './chapter-2';
+@use './chapter-3';
+@use './chapter-4';
+@use './chapter-5';
+@use './chapter-6';
