--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -108,13 +108,13 @@ topics:
 
                     Now, Learning On The Internet often means fighting ads and endless assaults on one’s attention — it means watching part-1-part-2-part-3 short-form video clips, taped together by action movie psychology hacks, narrated gracelessly by TTS AI voices. We’re down from a thousand and one websites to three, and each of those remaining monolith websites is just a soullessly-regurgitated, compression-down-scaled, AI-up-scaled version of the next.
                     
-                    ¶ {.lg-mk}
+                    ¶ {.xl-mk}
                     
                     We used to make lasting friendships with folks all over the world on shared interest and good humor.
 
-                    But now those social networks, once hand-built and -tended, vibrant and organic, are unceremoniously swallowed by social _media_ networks, pens built for trapping us and our little piggy attentions, turning us all into clout-chasers & content-creators, and removing us from what meaningful intimacy & community felt like.
+                    But now those social networks, once hand-built and hand-tended, vibrant and organic, are unceremoniously swallowed by social _media_ networks, pens built for trapping us and our little piggy attentions, turning us all into clout-chasers & content-creators, and removing us from what meaningful intimacy & community felt like.
                     
-                    ¶ {.lg-mk}
+                    ¶ {.xl-mk}
                     
                     Even coding for the web used to be different: One could Learn To Code™ to express oneself creatively, imbue one’s online presence with passion and meaning, and for some of us, build a real career.
 
